fix(ui): Set content-container z-index: 1; and spotlightContainer z-index: 9999; and adjust skeleton view

--- a/src/tabs-container/home/home.page.scss
+++ b/src/tabs-container/home/home.page.scss
@@ -234,7 +234,7 @@ ion-skeleton-text {
 }
 
 .title-skeleton {
-  height: 20px;
+  height: 25px;
 }
 
 .swiper-slide-content ion-skeleton-text {
